# serializer version: 1
# name: test_setcover_gemm_emits_golden[agntab_coverage_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT16x16x32_MI16x17uJx_2LAkZCeDwWk1u_m5qIH1p6qg4O6XUxLeYmQVnM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT16x16x32_MI16x1gGKH-1X754Y5p4ZOrGGfHb1iIL-zllWkD-SqO0xstes=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT16x16x32_MI16x1i_sjJ3F8JRi2S9btChSpE3HGZ4tWrh_f8UtmSB5UBDc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT16x16x32_MI16x1jgTR7gvCS4gfRd2q1MnRwjRPFCgpUT81xK9fieuDAj8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT16x16x32_MI16x1k62RZQKqWcWuqTOWLDAjj-tRy68yOzprya5K-aW9G1s=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT16x16x32_MI16x1lxu3IH6fLLI8W4D6bETVdiwxJl9tVy2XmMBkBOwa9wE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT16x16x32_MI16x1ot-y3gc1yM7gEcoTet4t9jWHCI2be4A55Tl8sKOZaEI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT16x16x32_MI16x1rRvlRzlGVLl9zQMmeyumbtzLRVqbswtVBySbca9gkkY=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[agntab_coverage_gfx950]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT128x160x64_MI324xX2vMF-w2nGRHEr9rv1PWpzgEROiY3uKDzgXNu8QVQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT128x160x64_MI32IxBPtRYZETYIGw2YAmYavn2nOw12omhMYWAcOQQZVKg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT128x160x64_MI32x-dFyUlTyuppv7As13OAKDzTneOqAsuym9NsyZjwYHc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT128x160x64_MI32zz5lGvpf_8_pdV-Lk5NkL8FcIw4ez1eVa9Tx6N9-gPA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT192x128x64_MI16HWKnU8hykWq5FJ_aY_mY6Yt2NNkNWFU5K6X0hGA-Pv4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT192x128x64_MI16dkkUowAx2UrgXfsIBwhBc5du3BM7shRLJU-9yxvsQxI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT192x128x64_MI16hs8mwYxhS0Iy-_nEluUfCSblZLn_y9zLUIbRRy4vwCU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT192x128x64_MI16jtQLNzjxy4BAtTblUdJmJexCRZgTsjCu78U5MMzx7H8=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[b6f4ss_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_B6F4SS_BH_UserArgs_MT16x16x128_MI3V4urf-sJnqpLBQJ0BIq46Cf6COg_PAVh-zNTX9_97A=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_B6F4SS_BH_UserArgs_MT16x16x128_MIsGdzB8pAq14isW0PUM-909wEdbk2D_EIAhnkAbwG_pk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_B6F4SS_BH_UserArgs_MT16x16x256_MIBNgF7VS5K_XgGL8jPiYVv_g3Lfq9CfinEmvArTyU4tc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_B6F4SS_BH_UserArgs_MT16x16x256_MIFftcU0AdL9RjooOrvSGBq9US6afiY7YolX33_isuaDw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_B6F4SS_BH_UserArgs_MT64x64x128_MIQeJ8ic_12ce_vF5GnHEXEAPs6vJ0SRJbmdmpkcvPqUM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_B6F4SS_BH_UserArgs_MT64x64x128_MIzNmd9n3i2UFx_A02FWTOJ-lr7wgxlzpI2JEl5RfTNTU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_B6F4SS_BH_UserArgs_MT64x64x256_MICxodDzKUMxwNkVhB5JQNhM8rmxuZBemYYUvroHZ9dOE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_B6F4SS_BH_UserArgs_MT64x64x256_MIu4xOuu4mNyDbuC6HVDeBFkfe9HMRBfKQwyWFuNzve4k=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[b8b8s_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_B8B8S_BH_UserArgs_MT256x32x64_MI1DlZZ0AsW3tqCG-d5e1szvRwDIShCE5cOZZkgaRmqGoI=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[bbs_bgradd_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_D_GradB_HA_S_UserArgs95NHz1oiTyWJEKUWrUctUjeCbkdGjecTI6Z9703fDzU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_D_GradB_HA_S_UserArgsqJUy-KnW7Z04sjaKY13aW3gE9vsORaerT5ZE9WK0jmk=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[bf16_CLS_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT1IfFAd9MDi4wb5SvwMHjTh98uVOgPs56U0z9HVl-nIgo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT1XTqFHyZGKLU-yy88Ap3PaDJKAOH-F3kMhrHTN-qhJgs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT2CMEsTZitwRfP2TMnsxH1V9U_cLJT3EaEX4RRwDVdBDk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT3Asa6wdMulQiYd1fqyIfPMIi7OQnw2xGJ03986jbTGtE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT3PLAY9wBGsG-xJhEKgj3G1u4JTeKGaK98A1BwRWPnrKs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT3PtND1DlSZvpjjv5ixoRG_1updcEweqTAHvnwvN9CTrw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT3lbxN7JnxsnM8gsxYLvuoeQJyqbdV9Ypbq9BIVpD8gkU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT4zY-6X26Xx0WKWnD0vMK904jFm1zubfg-GdoDWVRgIO8=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[bf6_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_B6SS_BH_UserArgs_MT16x16x128_MI16-RqHB_I5oSQnoxkbsN9B55ScpzxRvFHw3MfNLToJwEw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_B6SS_BH_UserArgs_MT16x16x128_MI16GmjPMd305mQhh44RBW0iP_GazaoNdA5DVEt5DxGttaw=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[cgemm_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_C_B_UserArgs_MT16x16x16_MI16x16x1Dg5ehS_uh1aFM5yVYsljI2JOb8kaPob0iJD_yTP-i0g=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_C_B_UserArgs_MT16x16x16_MI16x16x1GIYYUvJv-j3j1Z86qD-us_CIVvKmEUwJ9gggFDFm0h0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_C_B_UserArgs_MT16x16x8_MI16x16x1_MfGi-zWLThd8oUKWv-3l-AVRnDIslQP06ZIuNuYqK88=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_C_B_UserArgs_MT16x16x8_MI16x16x1_xVk73w98YQOb_hKac4mx2Ei83mdCha2mzZH1CipImVA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_C_B_UserArgs_MT32x32x8_MI16x16x1_DhA-IodSQ7PigXrki5XLlu74wqB_LGY5tI-OvAtx35s=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_C_B_UserArgs_MT32x32x8_MI16x16x1_Q717NvsgjO0PH8IHQ95djYv-paq5x4VnwGxXdyTZPWI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_C_B_UserArgs_MT64x64x8_MI16x16x1_hcJ02iqxwBWNq9eUbPvazrqJXdyOHArWS2nevl4zrU8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_C_B_UserArgs_MT64x64x8_MI16x16x1_vNdC9cZj1UOryl1Ie12OMuLN7HVz2HpHWM8WvrnloA0=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[custom_mainloop_scheduling]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT2CcXQqonmUhM6Y8tG1Qjw3Ri5zv1uSZ2wgXYzIqxDo1k=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT2wrYKreHE3gBipQ-XFl2jBiXWG8NB8WdDDSQ6SSrgeCI=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[custom_mainloop_scheduling_tf32]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_S_MX_B_UserArgs_MT192x256x32_MI16ZnfGVp069cmOCxiBPy2SHt07oBFA-ImPtM5Gom26Ixg=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[dot2_gfx942]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_HHS_BH_Bias_SAV_UserArgs_MT64x1x6SUutImVR7kqLVUMOQTqzIuXdtHIXCLzJ1yZJNMtXSmc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HHS_BH_Bias_SAV_UserArgs_MT64x1x6Sl5VG-vMQdAknSSjIJMd6GZVTGsz91o7zOsBzIxT43g=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HHS_BH_Bias_SAV_UserArgs_MT64x1x6hwm4vcWrGMpXUjX07MlyRtbvAR8FzqnV-3AGIFKSpa4=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[f16f8mix_ss_stoch]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_HF8_F8SS_BH_HA_S_SAB_UserArgs_MT67kx3kE7W2YHM5m6k2_PhvfEn4SbOtSzfbLi8-io9H_s=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HF8_F8SS_BH_HA_S_SAB_UserArgs_MT6D9NVvNj8Ol3pwjbCbyjnV_nA9HWOYG2SvOM__cDXJ3Y=',
      'err': -2,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HF8_F8SS_BH_HA_S_SAB_UserArgs_MT6c0b4J5B6qNYYlq0ml5DoyNKP1Dy_WSVPsiGsiV74XEg=',
      'err': -2,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HF8_F8SS_BH_HA_S_SAB_UserArgs_MT6nENO4SGhugyVzFnJexxx-CnE8I1vIL1OzWtB511aCt0=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[f4b8ss_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F4B8_BH_UserArgs_MT16x16x128_MI16r3gk-NFklc1y99qgfaLCbn5SYkmfS3n73FawcaBkbnA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4B8_BH_UserArgs_MT16x16x128_MI16sHSdcPj6ANAwIc0mLScNcxUnpPYFn2-M9CQlYWlz-uc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4B8_BH_UserArgs_MT16x16x256_MI160vzw-cp1RGZVdUrCLceD2m9QsgZuEU6IVPQvGvU2kik=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4B8_BH_UserArgs_MT16x16x256_MI16ySn4bgRHgXx0bcpu1TPqeAp0vGyS7djk4az2rfGTyuk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4B8_BH_UserArgs_MT64x64x128_MI16PZGQmDlxOur-0b6zOSI2IuWdPuTxWTfzy3z9Lk3gtb4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4B8_BH_UserArgs_MT64x64x128_MI16YcGwoLvPPbYO0A_kdSAbFRndHTgUcYuE5R7Io7eyLe4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4B8_BH_UserArgs_MT64x64x256_MI1640OmMsksaABV4KrSOcaymSRVH2RNgioYDEwUmdeVNqE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4B8_BH_UserArgs_MT64x64x256_MI16WFqa-0Af3G-4zm2pHCJbIEniuAxc8cCpdfGSn1gqvJo=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[f4f6ss_tdm_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F4F6BS_BH_UserArgs_MT16x16x128_MItcAu2yhm8BcvhyCWSSz8uvIPz0ELUrchKFfsqRX_l9o=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4F6BS_BH_UserArgs_MT16x16x256_MIeOcEV07wEFDdayIzNxVlxAizXsQbENjqLsVrIKhEHzk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4F6BS_BH_UserArgs_MT32x32x128_MIO8KJO1lpQeEjx9yUZJ25JbZOEMAk9Mq_9nYBTdTe8SQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4F6BS_BH_UserArgs_MT32x32x256_MIu_u8IRnCWoDud8WWed6nigYZgioZZ_k7xr-5MExZzpQ=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[f6b6ss_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F6B6SS_BH_UserArgs_MT16x16x128_MI7LgUh5Y48noRjFtUW2q0uQtByAqBNK5oQF0LHA-M144=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F6B6SS_BH_UserArgs_MT16x16x128_MIkZFtsD_l-HWvP56qeAPRqJu0VlD011kl-UcZbjiDs_M=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[f6b8ss_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F6B8_BH_UserArgs_MT16x16x128_MI166N9UHKYfzqlcbNV2aOvah81vKEFsOlFIpfPYpsM3G14=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F6B8_BH_UserArgs_MT16x16x128_MI16Wsf-D3hC2gusdIFrpUlKrSuVyEPUTRNx5f56xY_yRrs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F6B8_BH_UserArgs_MT16x16x256_MI16Im0pfy03Au5wRYUBoP5noH88fVwlwFO_eeJJ4Q42m30=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F6B8_BH_UserArgs_MT16x16x256_MI16VDwoebC7Fc2-XxxAYyyPX4y6yLpdkNfxl0Q8r7wfieQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F6B8_BH_UserArgs_MT64x64x128_MI16PJYse9h8XVhaKPJosrwKE_S6kfowStQdjFkNoRktdzs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F6B8_BH_UserArgs_MT64x64x128_MI16tAy0Vg9V0mWYoKj8j2Mm88bfPuu5N-ITimsKDrd3nKY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F6B8_BH_UserArgs_MT64x64x256_MI16EE50gsK3mNoEjvAqWjG0oRlz6fLCMmp5n2qEmP6TIJ0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F6B8_BH_UserArgs_MT64x64x256_MI16Xaf2BRdZzIMmgFWxqgZxYBbf6TW2juq1gz5crQAr_Yg=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[f8b6ss_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F8B6_BH_UserArgs_MT16x16x128_MI161PPwe40R0IbDIg-2txcbOWEC5TU8JY3LUl1D1fVWk1U=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8B6_BH_UserArgs_MT16x16x128_MI16dFEsWJ51YSqkAigDcsN8MpcPNLAuVZYsMhcWqSfsSeM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8B6_BH_UserArgs_MT16x16x256_MI167lIYaNkw3_9q9g0AD6R2B9ccOiaOpNIsgvTVjwvKqgE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8B6_BH_UserArgs_MT16x16x256_MI16v0WJFD4XDpO8eFX5Ug3fYJ0J4Goh4dRRYL1bz5bRbRA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8B6_BH_UserArgs_MT64x64x128_MI16dclSaRb0-B416YyBmV6W4-zico2Qf-IIA_QTh1b5NJA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8B6_BH_UserArgs_MT64x64x128_MI16po3fsPmOQ-TDZ_HpbfUcTld-IUNPrL8RXV3gqag7_gw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8B6_BH_UserArgs_MT64x64x256_MI16-_rtdPL6_VbPydliIYfZ0ugqdDgZRVOcKDf8hX3j5x4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8B6_BH_UserArgs_MT64x64x256_MI16Li9GHF1RjCivTp3f4UtfeKyeyoKHIqqfjzTXmDVFwjk=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[f8b8hs]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_F8B8HS_BH_UserArgs_MT16x16x128_MI9OduS8Y09dT__0RgD5NjgAJEoMRzM25SmYfGHvRGYEk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_F8B8HS_BH_UserArgs_MT16x16x128_MICXihIZ6HxMOT6l72-vvO-0mLqGxtTFvRjPnC0rItA3A=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_F8B8HS_BH_UserArgs_MT16x16x128_MIGcIzpUGKAXfrUUN5UUzsvuzBabW1ryiKB4ZrqUwI1Ws=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_F8B8HS_BH_UserArgs_MT16x16x128_MIJULn3b0kfMfZEr4M9lQ_cbmcT5C37XxC_wKgPO4HYeQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_F8B8HS_BH_UserArgs_MT16x16x128_MIe3fBhn1bgGPn3dp40LWgV3_QVwnddNujWohge3nq1vU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_F8B8HS_BH_UserArgs_MT16x16x128_MIu-v9nSn7KHNrOAHQaFzLk_S7BwuQxjvhLgc_yB_YdEA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_F8B8HS_BH_UserArgs_MT16x16x128_MIw5xUQa9zUdKP7_2EnRgKKopVUqWi2L-iU9tbSqOkz5c=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_F8B8HS_BH_UserArgs_MT16x16x128_MIx0_gdazKlwBHOZs7IGDTKGd2PrpYYIcTYuGC6mpHeYk=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[f8b8ss_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8B8SS_BH_UserArgs_MT64x64x128_MI3oaRmEp4X-QC-2b6_hGiRQz46j0Muit7NDyMB8WjXtw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8B8SS_BH_UserArgs_MT64x64x128_MI6Y8iuaPsAD2w-aHE86fK4mvpVmSTed5YYf0Z0Ev6u5Q=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8B8SS_BH_UserArgs_MT64x64x128_MI6YdGbFhbxDDKIqIMSSGMcygijZc4p2WGoTOOFHPlC3s=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8B8SS_BH_UserArgs_MT64x64x128_MIUPoSEOTMkJjM_A0ZBCXBpwCjHCVV9z8T8luuj0IKKc0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8B8SS_BH_UserArgs_MT64x64x128_MIZcTWPPsVsSDm6KLxCfCompX0i1bAQefcZklFbNooYpo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8B8SS_BH_UserArgs_MT64x64x128_MIbkr6hwCDn_7flicGo2UObqILJz9cZ6FoMOEtIgnuSYk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8B8SS_BH_UserArgs_MT64x64x128_MIc5TdPLvaJH2TwopWWGHicnqgy4YK6OX_BGQfaBfU2pE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8B8SS_BH_UserArgs_MT64x64x128_MIwlqadJLwnbjfVlEB4auAFrqjt9I1TLpCmp1d3KSsOnM=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[f8f16mix_f8s]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_F8H_HF8S_BH_Bias_SB_SAB_SCD_SAV_UaYG93mTrl9pBqbo8-_hn-NBzPR4c4aU3czjN9jY7D5c=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_F8H_HF8S_BH_Bias_SB_SAB_SCD_SAV_Uj-BS0uakkSlzetzzMDI6t5Rn03IOxy5uBuwER7s14Sc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_F8H_HF8S_BH_Bias_SB_SAB_SCD_SAV_UkbjTTE2ICNiPXaDrzhi-L7VMnvs62-bITH6zcbrdmFY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_F8H_HF8S_BH_Bias_SB_SAB_SCD_SAV_UmJO0NRdrxS5DTcYkEpJKW133aFebgZddvnXdHziexiU=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[f8f4ss_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F4SS_BH_UserArgs_MT16x16x128_MI3Y2APy9Plu7cpqWIpb8bPQQu1IPe7ftf8tvitL4wbEQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F4SS_BH_UserArgs_MT16x16x128_MIXmIGVPiK_64EgH52jUrjE6AQjptWU1D604JNZd6sqok=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F4SS_BH_UserArgs_MT16x16x256_MIZfE_QhpL5Ob767Ou1qKh_gMAby99wJatM-BAmCDJfuc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F4SS_BH_UserArgs_MT16x16x256_MIt83R67FYl1-DhaLfvTMcBmymX9CValegP6WKI0sHx1Q=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F4SS_BH_UserArgs_MT64x64x128_MI0gnN8Mt3wzhg4DgE4U-Rfl4-V-cbJIwc-xHhKm-BukY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F4SS_BH_UserArgs_MT64x64x128_MI6CZ9sA60t8eZfYmkSjUNkR3MLGw8R80-XfrS3UNsMVc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F4SS_BH_UserArgs_MT64x64x256_MIT4e8n0Me3ahX0n2ap1JR6InU6PiiFERXJ1OEJGA26Yw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F4SS_BH_UserArgs_MT64x64x256_MIrRpTsittUwoTzEp0NuXhSF5KJH5KT7VUEVUdz-zBApw=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[f8f8s_cls_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F8S_BH_UserArgs_MT256x256x256_MAFNNVBPCvIYbIaFVCDNivytAzV2Rv7aaneRir7b94DM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F8S_BH_UserArgs_MT256x256x256_MJdQeeB2d0uZVwKwoF5n3W-cATGIspAYBoNF5Wmhrr0Q=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F8S_BH_UserArgs_MT256x256x256_MNeI5RKsWFn7KdBVrBrUShW5z_-n3zuaFE2J9mxRp8Ic=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F8S_BH_UserArgs_MT256x256x256_MdUptBK08-L0Aq2-QP0Am8nscWLdFrVHJMNfh1t4IG5M=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[f8f8s_pk8_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8F8S_BH_UserArgs_MT256x64x64_MI1awVRjzKVgQsfgmBl-bq4hugpikrtZ5AqC7x-akfS_rw=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[fp16_HH_BHS_bf16mfma_gfx11]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_HH_BHS_BH_Bias_A_S_UserArgs_MT128JhE_xr6VKPNHCEPV0E4_McaNNqo7LJUS4qev4fQ70_A=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HH_BHS_BH_Bias_A_S_UserArgs_MT128dkhj5C_UL1GIkH_huTcEatX9j1yj-z8_tpG0Gtf9WzA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HH_BHS_BH_Bias_A_S_UserArgs_MT1927rGD0KtMSuh7F_znG2wiZpuCYhn05ntemj21FZkXTFw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HH_BHS_BH_Bias_A_S_UserArgs_MT192YPc__Kf3jRsStGPn_nc_F50pI9fWETY8fQXLeiQVzuI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HH_BHS_BH_Bias_A_S_UserArgs_MT256srQOozFOkTLbh9WBU0fM-JLMimPyuT6o7BD658seVnk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HH_BHS_BH_Bias_A_S_UserArgs_MT256u2D09SUv_TLTp1kelOd3rC5cBbSNzZ19NzMtzAuCbbc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HH_BHS_BH_Bias_A_S_UserArgs_MT64x-RGkqGQ_0cHQgnted3Hzx95ajfpB8LKz2P_WwvDCIoI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HH_BHS_BH_Bias_A_S_UserArgs_MT64xvtZOBpEdNp5BW-6Eh91lPH7q7iWbdoNzvMmB9fBYrw4=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[fp32_nt]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_Bias_SAV_UserArgs_MT64x96x32_GPC2NclXjbaxIHpJ9vAxbYmM8nELOPF057V9-5-_vg4=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[fp8_mxfp4_bf16_tn_act]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F4_F4BS_MXAE8B32_MXBE8B32_BH_Bi7Q-gdJSY6fIqhs5b4-_adIC-Oa1oE75mwpudm99cjxw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F4_F4BS_MXAE8B32_MXBE8B32_BH_BiRhaD-MwslZZxO0wvq1CbQh9JmNB2rtWsG3hNGDbX9I8=',
      'err': -2,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F4_F4BS_MXAE8B32_MXBE8B32_BH_BiVLO7qFBcRjlzhHm9Vvpq24iJ_4G0V3eSIuv6QRiK08I=',
      'err': -2,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F4_F4BS_MXAE8B32_MXBE8B32_BH_BiZR9v0xz5Z6-PTXZwkHT16QQl7Um3_VHudNoX30kRAZ0=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[fp8bf8nss_gradient_bias_b]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F8NB8NSS_BH_Bias_SB_B_SAB_UserArgOllm_XJtkQY0CHbT31fZEJS361vXIbixLMAWKmFx0f4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8NB8NSS_BH_Bias_SB_B_SAB_UserArgpsWYcWLL-6DzqPzK5dTrMqLzeUkdCxNfDaiFCajWU54=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[fp8n_use_e]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NF8NS_BH_Bias_H_AuxF8N_HA_S_SAB8fP1JgQxIGSjtzL9oqHkz25MFNnq5IO3V-bsPdpYmWA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NF8NS_BH_Bias_H_AuxF8N_HA_S_SABT1igzdazyFCcWRJcHSSsH7M1tXPKeKYyH-G5syDbuhU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NF8NS_BH_Bias_H_AuxF8N_HA_S_SABYt-BA5fp6qf4EliEWDKcSxsClUaZ3c43xXmAM5FuVvM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NF8NS_BH_Bias_H_AuxF8N_HA_S_SABfrCE20YEX1M8DQlipYJKcP6q1UMhMcghp2jiJYLi2jI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NF8NS_BH_Bias_H_AuxF8N_HA_S_SABoZ5C6rNn2nvITOlkc_MtJbiXrmzSlIl6QgneuLO_1pA=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[fp8nfp16mix_hhs]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F8NH_HHS_BH_UserArgs_MT16x16x64_Mkki3rcL3RKU347TI50gmSwqsGmwynuA2FECWJlThMCs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8NH_HHS_BH_UserArgs_MT16x16x64_Mm3pJmWFkPxpXSUkkaNYuyRvrO56082tFlXGhfwVHTtU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8NH_HHS_BH_UserArgs_MT16x16x64_MpIN4HT3ZCHwQN4g9xqBie3ArgrKMIOB_6aRGnZLm1Zk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8NH_HHS_BH_UserArgs_MT16x16x64_Mpm0HTA2kBvi7ib5FUTlwUbzFABuKNawQYZLCE24s3Fw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8NH_HHS_BH_UserArgs_MT16x16x64_MyyKV7cZ-lvNoW-Xw0YXp9Rn5XK_JFfkaAYyvLAH7mHY=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[general_wgm]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT1TkV2fBm-FGo9qVBZFJ7_G8dlh7HM5HDh-OEI5PxFsDw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT1WF1nGpFlMxGLVaVIBJXMfebHGslyTC7G4kHQyUw6yN4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT1X9cbSZAsBegpNqwygcWoPCJKH78NVGZqoq5fZqNzPHw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT1XCLqiC7QmVFUA_2V96X1PFqLorDg7gkiEJETNqfqq5c=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT1YeX2yk-Oq6IImEZfwMAdyap8bJyl18z_VLmrEBdzPAk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT1yrXxHxCWndD6jqqIjGYbA4LY9-1y1UQPmxe5qTB6YhU=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[hh_f8nhs]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_HH_F8NB8NHS_BH_Bias_SAV_UserArgs_0LDgL4BhuOb7KN9K1VMGkCkfAPkMAcOlKmqmaRQCf-g=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HH_F8NB8NHS_BH_Bias_SAV_UserArgs_FzArFKTJOazkoWmVksa4soDZJs_ll5XynHO4scPIYk0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HH_F8NB8NHS_BH_Bias_SAV_UserArgs_ax5Yny9vK3G_YC2SnEK0lc99GnEKCrs05oC-UQpYmCg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HH_F8NB8NHS_BH_Bias_SAV_UserArgs_gu5YqCgmNR1v1kakCMmeIMj3y4L_AybweiQzVmzSTZI=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[i8_gsu_gfx11]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_I8II_BH_A_I_UserArgs_MT128x16x32_B44XGEvt9gU9rZbQrDfozskdoj_di0pR9auM3BXE4JY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_I8II_BH_A_I_UserArgs_MT128x16x32_E3gJIC4D4Mhu6hTBQVcK-OPXHuRZAOByUazfidwW070=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_I8II_BH_A_I_UserArgs_MT64x16x32_MPocQC4exINOS-Dmb-VXWNgbbLlT_p5QZdrCX0DZPP9c=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_I8II_BH_A_I_UserArgs_MT64x16x32_MWWCLc5a16spfR3G4OVwwgvwy47Mqm2JhRyg5mlaD4oc=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[icache_flush]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_F8NHS_BH_Bias_A_S_SAB_SAV_UsFUofSfHXjNxouFjsAHJf5W9RtILbMDf_EjinmLuhkvg=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[lsu_fnuz]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_HF8N_HHS_BH_UserArgs_MT16x16x128_cQRdXxnlkhYgJkBQMLOL_NjRktUbqbOLhv8-xsA1IrY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HF8N_HHS_BH_UserArgs_MT16x16x128_pd9ZDg4LADWRFYySmZZxfDmOEX3WBzM0EmQVv7dBIIQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HF8N_HHS_BH_UserArgs_MT16x16x128_uhfSdAEp9ot8YTYvnI61udjpkBw0I98SIPwE_3Qtk5Q=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[lsu_i8]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8_BH_UserArgs_MT32x16x128_MI16x11vQBnIBfcEEsKrRZ-JYpKKZ36hTVpqBFJpVyK9IXHDo=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[mix_cvt_after_ds_fnuz]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_A_S_UserArgs_MT64Ah4j1gvRMt7Ra7IQPQeTwLf00mORnB8_Uh7hsi_FM8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_A_S_UserArgs_MT65nP2GVzeDxZUnlWpvZ6CVHoG3v5zU7tU1oqkNoEuqAM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_A_S_UserArgs_MT6JXx5yci-WieCGgZhbo7p5KVpAsjzU0FCL0VIKsq2mCc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_A_S_UserArgs_MT6MlH39peQrPC5eAJYpKYylFV1UsmGC_OyeF1mGb8uO60=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_A_S_UserArgs_MT6NJLsYgL0ippUxaxvyWFed0U0Gk3b3gZRm-mSGQsimuM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_A_S_UserArgs_MT6VnsMAcn_QqN-u2s03-Lt8bwtXRpnoJKyOf-hcvYiysw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_A_S_UserArgs_MT6eAHX7pi_pQZsuc0ore92AS6_zggrZgnmoDFP0IaItDI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_A_S_UserArgs_MT6j26WKem_5qKqMBNr9Tpr3EXPUPhuV1x3P_I06BL1Yx8=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[mxf6_tdm_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F6SS_MXAE8B32_MXBE8B32_BH_UserArg6JApdhn5RhWnzlZULNy2CyIY1JFYE1Qo1gr1V1ehpGI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F6SS_MXAE8B32_MXBE8B32_BH_UserArgZU9PnJsEId7j7WKLNQd2_sOxOx1M56d0x-CPXgXj7OI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F6SS_MXAE8B32_MXBE8B32_BH_UserArgga4VWb0Gk2muHDx4OqizAOP_zF4aKJ4Ud1W3SduAWHA=',
      'err': -2,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F6SS_MXAE8B32_MXBE8B32_BH_UserArgxtOXM8fD2fvZnpn_SUsCK6PwQq-1ksX64vptIP2JeDc=',
      'err': -2,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[segment_interleave_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT256x128x128_MI11LdZzJs2jMCCy58P86BF3OxjxdwPpOkHGRBw96MU4_M=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT256x128x128_MI17K4SY_il9YmwEvLThjOT2TJ9m8eVydnuzAHxZh6-ffM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT256x128x128_MI1Aj-D_b2QtBAftGkyM-q1bQG__MpnzZT_xZYO8WZCOno=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT256x128x128_MI1zRJX4eKHxD0r1bnPScrNfI0NW3UcRtfm-fM9cG3JOO8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT256x256x128_MI1Iw4P6Ly-_y_p5CCv5239zb4W-flcj1818UMaIOwDjUc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT256x256x128_MI1XIKwRRPY-L7nBa4FUFAtJwqHfP-m3iJxbrhmv1-lvtA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT256x256x128_MI1s0TVkX-84agVRBBQA6f5OYHDODg40FHNP5nNoZ18ROY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT256x256x128_MI1tjuZWTRSfglaACaMhx6OJf-dzFgk1CAEd2nzy6LyM8Y=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[ss_bss]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_SS_BSS_B_UserArgs_MT16x16x32_MI16mkg5BlQaF9EBs7n8n6sBFa_8Xgi_J8SZYbQnB0tsI6U=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_SS_BSS_B_UserArgs_MT64x64x32_MI16NhN_Y3pF6cJdzlO9avKpvkfQ2pYh9w3Ymo-AUZZRCPE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_SS_BSS_B_UserArgs_MT64x64x32_MI16eQrJ9gCq8cOd8pByDphuH85TXKawBIfs8whXsH570s4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_SS_BSS_B_UserArgs_MT64x64x32_MI16hFn7sZCT3XyabB9wf1Pr28UODJ_74b3rpgutzjKtZp4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_SS_BSS_B_UserArgs_MT64x64x32_MI16yWFzLvcqs4sk0izG9f5MYBOXFD0GpHCRBrurm-8Hci4=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[subtile_bf16]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT32x32x64_MI16x13oIyMcX_rSoe6a8p39tGtU0ochAP9R4gGi0skFrooNs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT32x32x64_MI16x156sfTPp6YgXF7g8fZ3Hv0uwhzjmC0lv4xS-p6rFNKNU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT32x32x64_MI16x15aKC14F32IBjUwMTN2N5pODMh6I2YSjzTLlb2npg7go=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT32x32x64_MI16x1O4QDoKEONVtHGzO9rZk3yybkqQ2UcZZp-437Qf3rAo4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT32x32x64_MI16x1WzWIzqElXoCDbzkqWuVplWaT2MP0Q3LUlBeSY6cPxNU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT64x32x64_MI16x182WwvL0LlNZjhJXi1Ja_mt5qk-agfHsIVbLR2fxxvlU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT64x32x64_MI16x1N47aNlO0a8cjR-Lhgonb4WCk2pdB_A7LO2Ezy4-O8io=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT64x32x64_MI16x1REZudfU74xL9VLQCOpQeN0tVYeNjti7UhBNV8_tEy5Y=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[subtile_bf16_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT32x32x64_MI16x19bOiFvbGCr3Do6WGbuGvv2NU-OMte9jh1oeQH8T_QCw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT32x32x64_MI16x1BG65iCNDV4EtWqYusMsPSqyl2_VWT5tDeXHJQOPiyqE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT32x32x64_MI16x1UyuiTSjfxs4-RpwZjyLQHBLx0PdbLWmHh1x51TOS00Y=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT32x32x64_MI16x1aBXk2sYrDQycOD0yfYHteajJ-OduBxLXTviIWh_EiYg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT32x32x64_MI16x1iE-75-OxoA40mlvkQK740xpzzdOgqjukQ8EDmnUZR-M=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT32x32x64_MI16x1wpSFSEOiUlk3lSvPABiltcZco4VnxIwPlMA30cqMujU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT64x64x64_MI16x1KBAI_hCbRM3Da041xE7OYC0AHS6V3EVGQYz-V8rS1qQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT64x64x64_MI16x1uSDkxqs-WOLqr3wAoRs-WzK194aqLkit_mLjucqkwaE=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[subtile_mxfp8_bias_sav]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F8BS_MXAE8B32_MXBE8B32_BH_Bias_S_-8ZnP034tcO7ra9NUuKKxjoLEXnwC8pTtUoNRF7_ly4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8BS_MXAE8B32_MXBE8B32_BH_Bias_S_61rxG5OoOcIgQ-Y5C83TqftRrKSQD4Pa2_ZGMSdknKM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8BS_MXAE8B32_MXBE8B32_BH_Bias_S_8S77NPqlelA1xR-rOFwugD2VRQQMeaTCt-lXwydhls8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8BS_MXAE8B32_MXBE8B32_BH_Bias_S_BOkgxDDE1DZWBkzmxQ7Ojhl5gcWZd0RUa06pymxVnqE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8BS_MXAE8B32_MXBE8B32_BH_Bias_S_bGRK_l3XNkkr6iwGk9DkPHBNydwoedJLDMOt6vheH7E=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[swizzleA]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_HHS_STA_BH_Bias_H_SAV_UserArgs_MTBC0hWHCZ1LQhFEG28nQwy0jrFSSxjKqjvyyAOE7oruQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HHS_STA_BH_Bias_H_SAV_UserArgs_MTxDf0Fo3TE5UY8mH6Ks3JU8CG_8CusZGAylyhy3f0L1Q=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[swizzleB]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_HHS_STB_BH_Bias_H_SAV_UserArgs_MTKBFHMu4ieNU_mua0XH52p2AgzqHSufyC5wC5n-zxMxM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HHS_STB_BH_Bias_H_SAV_UserArgs_MTfXI1vmoPZGDufbdttff19hFkfH5LxUuGOcuidw6exu0=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[ulsgro1]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_A_S_SAV_UserArgs_MT12Q4CEgn_6-uu1p6YPoCPvLiXVYX0ec3sh8pF-ZyhetYc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_A_S_SAV_UserArgs_MT12VgBDGE9QQ75AAwK51WAocP6_4yTYjfrE1obRtqAI0LE=',
      'err': -2,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_A_S_SAV_UserArgs_MT12XmhHtOPiqSaJ3j4ddpXitfRQire0U8q5mBGlrB0vqHQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_A_S_SAV_UserArgs_MT12YtAidvDCa4tVGPwE_oqcxUidUC5SZG9hdK9YNOMNNSA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_A_S_SAV_UserArgs_MT12mtaGRSBJzgK4UVVRuvP8yhE_mumuzIiyB3VUNCRNfRM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_A_S_SAV_UserArgs_MT12rAJS3Eno9vKdTCVq2X3-VIxpZbit7ATehuUuRbfG_DY=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[use_beta_false]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HHS_H_UserArgs_MT64x64x16_MI16x16YIDQ6UXJiCrZXC2oXNZbu2s9c0uZKjEPNSTDNU9dPG8=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[xfp32_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_MX_B_Bias_SB_HA_S_SAB_SAV_UserAIWTOi1q4cYoUEBuUn3HyAClPJaz4HhLFwfmcR01r_rU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_MX_B_Bias_SB_HA_S_SAB_SAV_UserAglBb4WOS06FY72WvB18Z1oUC8BQUzOB4FDeoYsXXRHM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_MX_B_Bias_SB_HA_S_SAB_SAV_UserAoTT41t68JkVA5yOcnnaqzOodjqFi2Qt2xB4HdPBbXkw=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[zgemm]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_C_Z_B_UserArgs_MT16x16x4_MI16x16xI7aDn8mfZQ0ScKrckpB71uOTR8KOvhIp77VLeK-htCo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_C_Z_B_UserArgs_MT16x16x4_MI16x16xN3Zf_e_qTmR7eyDn_yZahDoDcqnlVHVa4W-AAJ2XQ10=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_C_Z_B_UserArgs_MT16x16x4_MI16x16xNYQiPOpZ11biEdfMp9ugIVJCdOE6viFKI8Jp2E5zHFo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_C_Z_B_UserArgs_MT16x16x4_MI16x16xZ_r7q5_Xx_bsAdiAW-xYljWY8Jh1zNiLLa_STB9_QyE=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[zgemm_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_Z_B_UserArgs_MT16x32x8_SN_LDSB0_ANbcEX1ikYf6Pl73I6DwUny3rrd7bN9ed4nm_vOZQwFA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_Z_B_UserArgs_MT16x8x8_SN_LDSB0_AFRJK5y6ufVdSTdLtlrpsALfIab1XK1CeGtKkOVY1niGI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_Z_B_UserArgs_MT32x16x8_SN_LDSB0_ADbno__VBbO0nnkqDpLFXeu7tQFXzZ1xNBFGiOnBr1ZM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_Z_B_UserArgs_MT4x8x16_SN_LDSB0_AFVOPwZQ9HgquBMjDGZIwe3V8Q4UUXWlSBRe_kzt6Shkk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_Z_B_UserArgs_MT4x8x8_SN_LDSB0_AFCYD3g8HQeZQByM_d3-7sGi3t5OkfAu8U6bpAdzYzWcSs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_Z_B_UserArgs_MT8x16x8_SN_LDSB0_AF7qra_QI9o7P_PR49Rv7hd51JeUqJ9xjEfvCLGWA4amI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_Z_B_UserArgs_MT8x4x16_SN_LDSB0_AFkL2WEse-O-cdJuNUzdsWwhBLlgxEEXKfkjOg7AiiLEw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_Z_B_UserArgs_MT8x4x8_SN_LDSB0_AFCcuT53f5-l79_FDXq3O4okrR3S3zUc4lDN9837V8Km4c=',
      'err': 0,
    }),
  ])
# ---
